<resources>
    <string name="app_name">GroceryStore-Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="createcustomer_fragment_label">Create Customer</string>
    <string name="login_fragment_label">Login Page</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="createcustomer_hint">Insert Name Here</string>
    <string name="createcustomer_button">Create Customer</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="email_hint">Enter Email</string>
    <string name="address_hint">Enter Address</string>
    <string name="phone_hint">Enter Phone</string>
    <string name="newcustomer_hint">Insert Name Here</string>
    <string name="newcustomer_button">Add Customer</string>
    <string name="view_button">View Order</string>
    <string name="update_button">Update Order</string>
    <string name="login_button">Login</string>
    <string name="employee_email">Employee Email</string>
    <string name="employee_password">Employee Password</string>
    <string name="orderId_hint">Insert Order ID</string>
</resources>