<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">






    <EditText
        android:id="@+id/employee_email"
        android:hint="@string/employee_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke_box"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:textSize="25dp"
        />

    <EditText
        android:id="@+id/employee_password"
        android:inputType="textPassword"
        android:hint="@string/employee_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke_box"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:textSize="25dp"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:text="@string/login_button" />
<!--        tools:layout_editor_absoluteX="119dp"-->
<!--        tools:layout_editor_absoluteY="134dp" />-->
    <TextView
        android:id="@+id/status"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:layout_gravity="center"
        android:text=""
        android:textColor= "@color/strong_orange"/>


</LinearLayout>